Fix logo alignment

--- a/superset/assets/stylesheets/tb.less
+++ b/superset/assets/stylesheets/tb.less
@@ -15,6 +15,9 @@
     padding: 3px 0;
     border-bottom: 1px solid @tb-border-color;
 }
+.navbar-brand {
+    padding: 14px 10px;
+}
 footer hr {
     border: none;
 }
